--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -22,7 +22,7 @@
       <label for="ancestry" class="col-sm-2 control-label">所属分类:</label>
       <div class="col-sm-5">
         <select name="category[ancestry]">
-          <option value="">一级分类</option>
+          <option value="">根分类</option>
           <% @root_categories.each do |category| %>
             <% next if category == @category %>
             <option value="<%= category.id %>" <%= @category.ancestry == category.id.to_s ? 'selected' : '' %>><%= category.title %></option>
