--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -29,7 +29,7 @@
       <label for="category_id" class="col-sm-2 control-label">所属分类:</label>
       <div class="col-sm-5">
         <select name="product[category_id]">
-          <option></option>
+          <option value="" disabled>根分类</option>
           <% @root_categories.each do |category| %>
             <optgroup label="<%= category.title %>"></optgroup>
 
