--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -28,8 +28,11 @@
           <li><a href="<%= new_user_path %>">注册</a></li>
           <li><a href="<%= new_session_path %>">登录</a></li>
         <% else %>
-          <li><a href="#">欢迎你, <%= current_user.username %></a></li>
+          <li><a href="#">欢迎你，<%= current_user.username %></a></li>
           <li><%= link_to "退出", logout_path, method: :delete %></li>
+          <% if current_user.is_admin? %>
+            <li><a href="<%= admin_root_path %>">后台管理</a></li>
+          <% end -%>
         <% end -%>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">个人中心
