--- a/app/views/admin/layouts/_menu.html.erb
+++ b/app/views/admin/layouts/_menu.html.erb
@@ -18,16 +18,11 @@
         <li><a href="<%= admin_products_path %>">商品</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <% unless logged_in? %>
-          <li><a href="<%= new_user_path %>">注册</a></li>
-          <li><a href="<%= new_session_path %>">登录</a></li>
-        <% else %>
+        <% if logged_in? %>
           <li><a href="#">欢迎你，<%= current_user.username %></a></li>
           <li><%= link_to "退出", logout_path, method: :delete %></li>
-          <% if current_user.is_admin? %>
-            <li><a href="<%= root_path %>">回前台</a></li>
-          <% end -%>
-        <% end -%>
+          <li><a href="<%= root_path %>">回前台</a></li>
+        <% end %>
       </ul>
     </div>
   </div>
