--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -69,6 +69,12 @@
       </div>
     </div>
     <div class="form-group">
+      <label for="image_url" class="col-sm-2 control-label">商品图片URL*:</label>
+      <div class="col-sm-5">
+        <%= f.text_field :image_url, class: "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
       <label for="description" class="col-sm-2 control-label">描述*:</label>
       <div class="col-sm-5">
         <%= f.text_area :description, class: "form-control" %>
