--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,13 +11,18 @@
     </ol>
     <h1><%= @product.title %></h1>
     <div class="row">
-      <% @product.product_images.each do |product_image| %>
-        <div class="col-xs-6 col-md-3">
-          <a href="#" class="thumbnail detail">
-            <%= image_tag product_image.image.url(:middle) %>
-          </a>
-        </div>
-      <% end -%>
+      <div class="col-xs-6 col-md-3">
+        <a href="#" class="thumbnail detail">
+          <%= image_tag @product.image_url %>
+        </a>
+      </div>
+      <%# @product.product_images.each do |product_image| %>
+      <!--        <div class="col-xs-6 col-md-3">-->
+      <!--          <a href="#" class="thumbnail detail">-->
+      <%#= image_tag product_image.image.url(:middle) %>
+      <!--          </a>-->
+      <!--        </div>-->
+      <%# end -%>
     </div>
 
     <ul class="list-unstyled">
