--- a/app/views/shopping_carts/create.html.erb
+++ b/app/views/shopping_carts/create.html.erb
@@ -7,7 +7,8 @@
         <div class="media">
           <div class="media-left">
             <a href="javascript:;">
-              <%= image_tag @product.main_product_image.image.url(:small), class: 'media-object', alt: @product.title %>
+              <%#= image_tag @product.main_product_image.image.url(:small), class: 'media-object', alt: @product.title %>
+              <%= image_tag @product.image_url, class: 'media-object', alt: @product.title %>
             </a>
           </div>
           <div class="media-body">
