--- a/app/views/shopping_carts/index.html.erb
+++ b/app/views/shopping_carts/index.html.erb
@@ -7,7 +7,8 @@
           <div class="media shopping-cart-row">
             <div class="media-left">
               <a href="<%= product_path(shopping_cart.product) %>">
-                <%= image_tag shopping_cart.product.main_product_image.image.url(:small), class: 'media-object', alt: shopping_cart.product.title %>
+                <%#= image_tag shopping_cart.product.main_product_image.image.url(:small), class: 'media-object', alt: shopping_cart.product.title %>
+                <%= image_tag shopping_cart.product.image_url, class: 'media-object', alt: shopping_cart.product.title %>
               </a>
             </div>
             <div class="media-body">
